<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_deck"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_agregar"
            android:icon="@drawable/ic_add"
            android:title="@string/menu_agregar" />

        <item
            android:id="@+id/nav_tiendas"
            android:icon="@drawable/ic_restaurant"
            android:title="@string/menu_productos" />

        <item
            android:id="@+id/nav_servicios"
            android:icon="@drawable/ic_phone"
            android:title="@string/menu_servicios" />

        <item
            android:id="@+id/nav_mapas"
            android:icon="@drawable/ic_baseline_map_24"
            android:title="@string/menu_sucursales" />



    </group>
</menu>