<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.panaderia.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_tiendas"
        android:name="com.example.panaderia.ui.productos.ProductosFragment"
        android:label="@string/menu_productos"
        tools:layout="@layout/fragment_productos" />

    <fragment
        android:id="@+id/nav_servicios"
        android:name="com.example.panaderia.ui.servicios.ServiciosFragment"
        android:label="@string/menu_servicios"
        tools:layout="@layout/fragment_servicios" />

    <fragment
        android:id="@+id/nav_mapas"
        android:name="com.example.panaderia.ui.mapas.MapasFragment"
        android:label="@string/menu_sucursales"
        tools:layout="@layout/fragment_mapas" />

    <fragment
        android:id="@+id/nav_agregar"
        android:name="com.example.panaderia.ui.agregar.agregarFragment"
        android:label="@string/menu_agregar"
        tools:layout="@layout/fragment_agregar" />


</navigation>