<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.productos.dialogFragement.DialogActualizarFragment">

    <EditText
        android:layout_margin="10dp"
        android:id="@+id/edNombreActualizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/addNombre" />

    <EditText
        android:layout_margin="10dp"
        android:id="@+id/edDireccionActualizarr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/addDescripcion" />

    <EditText
        android:layout_margin="10dp"
        android:id="@+id/edTelefonoActualizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/addPrecio" />

</LinearLayout>